Fixing kirby location on mobile browser
attempt 2

--- a/styles.css
+++ b/styles.css
@@ -583,7 +583,7 @@ img{
     }
 
     #kirby-container {
-        top: 70%;
+        top: 50%;
     }
 }
 
